kubernetes/consumer-coordinator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: consumer-coordinator
  name: consumer-coordinator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consumer-coordinator
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/kafka-network: "true"
        io.kompose.service: consumer-coordinator
    spec:
      containers:
        - image: consumer-coordinator:latest
          name: consumer-coordinator
          ports:
            - containerPort: 8082
          resources: {}
          imagePullPolicy: Never
      restartPolicy: Always
status: {}
