kubernetes/project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: project
  name: project
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: project
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/kafka-network: "true"
        io.kompose.service: project
    spec:
      containers:
        - image: message-queue-kafka-project:latest
          name: project
          ports:
            - containerPort: 8081
          resources: {}
          imagePullPolicy: Never
      restartPolicy: Always
status: {}
